# task3_tpch

./: CMakeLists.txt  LICENSE  README_Task4  main.cpp
include/: queries.hpp  query_tests.hpp  tables.hpp  task2.hpp  task4.hpp  time_measurement.hpp
src/: queries.cpp  query_tests.cpp  tables.cpp  task2.cpp  task4.cpp  time_measurement.cpp
